<resources>
    <string name="app_name">PocketIRC</string>
    <string name="irc_login">IRC Login</string>
    <string name="help_symbol">help symbol</string>
    <string name="nick">Nick</string>
    <string name="i_have_a_password">I have a password</string>
    <string name="password">Password</string>
    <string name="channel">Channel</string>
    <string name="hash">#</string>
    <string name="start_as_guest">Start as guest</string>
    <string name="i_don_t_have_an_irc_account_yet">I don\'t have an IRC account yet</string>
    <string name="irc_register">IRC Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="register_user">Register user</string>
    <string name="take_me_to_login">Take me to login</string>
    <string name="confirm_registration">Confirm registration</string>
    <string name="command">Command</string>
    <string name="i_have_a_command">I have a command</string>
    <string name="loading_chatroom">Connecting to server…</string>
    <string name="send_button">send button</string>
    <string name="active_users">Active users</string>
    <string name="username">Username</string>
    <string name="plus">plus</string>
    <string name="channels">Channels</string>
    <string name="private_messages">Private messages</string>
    <string name="type_your_message">Type your message</string>
</resources>