<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--main layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="vertical">

        <!--layout space-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="38"/>

        <!--title layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_weight="20"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="center"
            android:orientation="horizontal">

            <!--title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/irc_login"
                android:textSize="28sp"
                android:fontFamily="sans-serif-black"
                tools:ignore="NestedWeights" />

            <!--help button-->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:contentDescription="@string/help_symbol"
                android:gravity="start|center_vertical"
                android:onClick="help"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:textColor="@color/white"
                app:srcCompat="@android:drawable/ic_menu_help"
                tools:ignore="UsingOnClickInXml,ImageContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <!--username-->
        <TextView
            android:id="@+id/usernameLabel"
            android:labelFor="@id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="start|center_vertical"
            android:text="@string/nick"
            android:textSize="15sp"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:layout_weight="5"
            android:backgroundTint="@color/buttonright"
            android:fontFamily="sans-serif"
            android:gravity="start|center_vertical"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!--password checkbox-->
        <CheckBox
            android:id="@+id/passwordCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:onClick="passwordCheck"
            android:text="@string/i_have_a_password"
            tools:ignore="UsingOnClickInXml" />

        <!--password-->
        <TextView
            android:id="@+id/passwordLabel"
            android:labelFor="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="start|center_vertical"
            android:text="@string/password"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:layout_weight="5"
            android:backgroundTint="@color/buttonright"
            android:fontFamily="sans-serif"
            android:gravity="start|center_vertical"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:visibility="gone"/>

        <!--channel-->
        <TextView
            android:id="@+id/channelLabel"
            android:labelFor="@id/channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="start|center_vertical"
            android:text="@string/channel"
            android:textSize="15sp"
            android:fontFamily="sans-serif"/>

        <!--hash layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8"
            android:layout_weight="10"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/hash"
                android:textSize="15sp"
                android:fontFamily="sans-serif"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/buttonright"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="15sp"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <!--login button-->
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|center_vertical"
            android:onClick="login"
            android:text="@string/start_as_guest"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

        <!--layout space-->
        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="22" />

        <!--register button-->
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/i_don_t_have_an_irc_account_yet"
            android:textSize="15sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:background="#6c5ce7"
            android:onClick="register"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>