<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmRegisterActivity">

    <!--main layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="vertical">

        <!--layout space-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="38"/>

        <!--title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="start|center_vertical"
            android:text="@string/irc_register"
            android:textSize="28sp"
            android:fontFamily="sans-serif-black"/>

        <!--command-->
        <TextView
            android:id="@+id/commandLabel"
            android:labelFor="@id/command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:gravity="start|center_vertical"
            android:text="@string/command"
            android:textSize="15sp"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:layout_weight="5"
            android:backgroundTint="@color/buttonright"
            android:fontFamily="sans-serif"
            android:gravity="start|center_vertical"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <!--confirm registration button-->
        <Button
            android:id="@+id/confirmRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32pt"
            android:layout_marginEnd="40pt"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|center_vertical"
            android:onClick="confirmRegistration"
            android:text="@string/confirm_registration"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck" />

        <!--layout space-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>